<resources>
    <string name="app_name">Bluetooth Manager</string>
    <string name="action_instructions">Instructions</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Enable Bluetooth</string>
    <string name="previous">Previous</string>

    <string name="my_link"><a href="https://drive.google.com/file/d/15m_IHMHJuL50GD7ED1wr0oiJYxRY-aMS/view?usp=sharing">Link</a></string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="suggestionEnableBluetooth">Please, enable bluetooth to get app working!</string>
    <string name="suggestionNoBtAdapter">Sorry, no bluetooth adapter on your device, app can not work.</string>
    <string name="fab_content_desc">Add Device</string>
    <string name="error">App error! Try to refrash activity</string>
    <string name="openMainActivity">Go back</string>
    <string name="btnEnBt">Enable bluetooth</string>
    <string name="refresh_application">Refresh</string>
    <string name="paired_devices">List of bounded devices</string>
    <string name="other_discoverable_devices">New bounded devices can be added by clicking the button below</string>
    <string name="no_devices_added">No devices added</string>
    <string name="hse_logo">MIEM</string>
    <string name="list_of_commands">List of available commands:</string>
    <string name="send_1_command">Send 1 to device</string>
    <string name="send_0_command">Send 0 to device</string>
    <string name="incoming_data">Incoming data from Arduino:</string>
    <string name="deviceIsSelected">Connection is already started, please wait</string>
    <string name="no_paired_devices">No bounded devices, add them in settings by clicking the button below</string>
    <string name="instruction_alert">Tip</string>
    <string name="ok">OK</string>
    <string name="instruction_for_app">Use this app to connect to your robotic devices. If the list of available devices is empty, go to the settings by clicking the assigned button, make new connection. Only one device is available for connection, to start connection tap on your device. Data transfer is carried out using the protocol available at the link: \nhttps://drive.google.com/file/d/15m_IHMHJuL50GD7ED1wr0oiJYxRY-aMS/view?usp=sharing.  \nThe application was created as part of the course work of Maxim Kolpakov in 2021.</string>
    <string name="instructions_title">Help</string>
    <string name="clear">Clear</string>
    <string name="button_forward">Moving forward</string>
    <string name="button_backward">Moving backward</string>
    <string name="button_leftward">Moving leftward</string>
    <string name="button_rightward">Moving rightward</string>
    <string name="button_stop">stop</string>
    <string name="press_again">Press again to exit</string>
    <string name="exit">exit</string>
    <string name="seekBarProgress">Delay in sending commands - %1$s sec.</string>
    <string name="connection_not_successful">Connection failed!</string>
    <string name="search_title">Search in devices by name</string>
    <string name="cancel">Cancel</string>
    <string name="connection_settings">Connection settings</string>
    <string name="selecting_type">Select the device type</string>
    <string name="connection_title">Connection...</string>
    <string name="сonnection_successful">Connection successful</string>
    <string name="error_title">Error</string>
    <string name="question_try_to_reconnect">Connection failed. Try to reconnect?</string>
    <string name="reconnection_successful">Reconnection is successful</string>
    <string name="hold_command_on">Command hold is enabled</string>
    <string name="hold_command_off">Command hold is disabled</string>
    <string name="printed_information">"Printed information: "</string>
    <string name="sending_data">Sending data:</string>
    <string name="terminal">Terminal</string>
    <string name="hold_command_title">Hold command</string>
    <string name="control_panel_title">Control panel</string>
    <string name="app_not_visible_with_stop">The app is minimized, according to the delay time I send a stop command and disconnect the device</string>
    <string name="motion_stop">Motion stop</string>
    <string name="disconnecting_from_the_device">Disconnecting from the device...</string>
    <string name="second">sec.</string>
    <string name="wait_control">Wait until control lock is complete -</string>
    <string name="wait_stop">"Wait until the stop command is sent, another "</string>
    <string name="stop_forward">Stop moving forward</string>
    <string name="stop_backward">Stop moving backward</string>
    <string name="stop_leftward">Stop moving leftward</string>
    <string name="stop_rightward">Stop moving rightward</string>
    <string name="sending_data_bytes">"Sending data: [ "</string>
    <string name="sending_data_failed">Sending data failed</string>
</resources>