<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendDataActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/list_of_commands_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_of_commands" />

            <Button
                android:id="@+id/button_to_send_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendZeroButtonVoid"
                android:text="@string/send_0_command" />

            <Button
                android:id="@+id/button_to_send_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendOneButtonVoid"
                android:text="@string/send_1_command" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>